--- a/public/css/grid.less
+++ b/public/css/grid.less
@@ -1086,10 +1086,7 @@ div.markup_displayer_media .icon_col {
 
 .fixed_tools {
   
-    /* 
-      background: none repeat scroll 0 0 rgba(0, 0, 0, 0.2);
-    */
-    background:#fff;
+     
     bottom: 0;
     display: block;
     height: auto;
